--- a/src/pages/PlacesPage/style.css
+++ b/src/pages/PlacesPage/style.css
@@ -1,5 +1,6 @@
 .places-background {
   background-color: #BC2F19;
+  overflow: hidden;
 }
 
 /* .places-page {} */
